# Iotiot-internship

./: .gitignore  Readme.md  brand.json  index.html  knowledge_graph.json  main.py  output.json  queries.json  requirements.txt  run_bot.py
Ai sdr/: Apis.txt
Bots/: p_generate_hr_questions.py  p_test.py  s_extract_claimed_ratings.py  s_extract_profiles.py  v_generation.py
Flight_booking/: main.py
Flight_booking/Bots/: Login.py
Flight_booking/Config/: credentials.json
Flight_booking_bot/: readme.md  readme.txt
Flight_booking_bot/Bots/: Search.py
Flight_booking_bot/Config/: credentials.json
Flight_booking_bot/Output/: output.json
HR_AI/: README.md
HR_AI/Bots/: p_logging_utils.py  p_scrap_img1.py  p_take_screenshots.py  s_assurance_calculator.py  s_extract_resume.py  s_generate_questions.py  s_generate_report.py  (+4 more)
Learning Tasks/: CRM.drawio  Untitled Diagram.drawio
LinkedIn_bot/: Readme.md  Readme.txt
Movie-ticket-booking/: Readme.txt  main.py  play.py
Movie-ticket-booking_bot/: Readme.md
Output/: p_hr_questions.md  s_generated_questions.json  v_questions.json
Playright/: package-lock.json
Playwright/: Readme.txt  main.py  package.json
module-1/: .gitlab-ci.yml  .release-it.yml  README.md  SummaryStage.md
module-1/example/: CMakeLists.txt
module-1/example/include/: problem1.h
module-1/example/src/: problem1.cpp  problem1_app.cpp
module-1/example/tests/: problem1_test.cpp
module-2/: Module-2.xlsx  README.md  SummaryStage.md
module-4/: PracticeStage.md  README.md  SummaryStage.md
ticket_booking/: main.py  readme.txt
(+30 files in other folders)
